<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:layout_editor_absoluteX="45dp" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/chkJupiter"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/btnShowWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_show_weight"
        app:layout_constraintTop_toBottomOf="@+id/txtWeight"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_show_weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowWeight"
        app:layout_constraintVertical_bias="0.208" />

    <CheckBox
        android:id="@+id/chkEarth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/chk_Earth"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="40dp" />

    <CheckBox
        android:id="@+id/chkJupiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chk_jupiter"
        app:layout_constraintTop_toBottomOf="@+id/chkMass"
        tools:layout_editor_absoluteX="40dp" />

    <CheckBox
        android:id="@+id/chkMass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chk_mass"
        app:layout_constraintTop_toBottomOf="@+id/chkEarth"
        tools:layout_editor_absoluteX="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>